# SDS

./: Copyright.txt  INSTALL.sds  License.txt  Makefile.am  Makefile.in  README.md  autogen.sh  config.h  config.h.in  configure  configure.ac  configure.scan  cscope.files  cscope.out  libtool  runconf-client.sh  runconf-server.sh  sds.conf
doc/: Makefile.in
man/: Makefile.in
src/: Makefile.am  Makefile.in
src/client/: Makefile.am  Makefile.in  fastquery-c-interface.cpp  fastquery-c-interface.h  hdf5-sds.patch  reorgnize.c  reorgnize.h  sds-array.h  sds-binary.c  sds-binary.h  sds-client-communicator.c  sds-client-communicator.h  sds-collection.c  sds-collection.h  sds-cond-lexer.l  sds-cond-parser.y  sds-condition-tree.c  sds-condition-tree.h  sds-config-client.c  sds-config-client.h  sds-external-vol-example.c  sds-external-vol.c  sds-external-vol.h  sds-hdf5.c  sds-hdf5.h  sds-histgram.c  sds-histgram.h  sds-index-file.c  sds-index-file.h  sds-netcdf.c  sds-netcdf.h  sds-object.c  sds-object.h  sds-parser.c  sds-parser.h  sds-pquery.c  sds-pquery.h  sds-project.c  sds-project.h  sds-query-tree.c  (+8 more)
src/common/: Makefile.am  Makefile.in  dictionary.c  dictionary.h  iniparser.c  iniparser.h  message.protoc  mp-fill.c  mp-fill.h  sds-common.c  sds-common.h  sds-config-client.h  sds-config-server.c  sds-config-server.h  sds-error.c  sds-error.h  sds-hdf5.c
src/server/: #sds-job.h#  Makefile.am  Makefile.in  analyze-job.c  analyze-job.h  attribute-db-access.c  attribute-db-access.h  data-reorganizer.c  data-reorganizer.h  db-access.c  db-access.h  db-message.protoc  db-message.protoc.pb-c.c  db-message.protoc.pb-c.h  listen-thread.c  listen-thread.h  metadata-db-access.c  metadata-db-access.h  mpirun.c  mpirun.h  qsub.c  qsub.h  query-db-access.c  query-db-access.h  query-db-messasge.protoc  query-handler-thread.c  query-handler-thread.h  reorganization-job.c  reorganization-job.h  reorganization-manager-thread.c  reorganization-manager-thread.h  sbatch.c  sbatch.h  sds-config-server.c  sds-config-server.h  sds-job.c  sds-job.h  sds-server.c  sds-server.h  trace_log.c  (+3 more)
src/service/: Makefile.am  Makefile.in  chunk-sort.c  concatenation.c  fq-index-builder.cc  h5group-sorter-rank.c  h5group-sorter.c  openmp-sort.c  openmsi-transposer.c  run-analysis.c  sds-vol-external-native.c  sds-vol-external-native.h  sfc.c  vpic-energy-sorter.c
src/service/.deps/: openmsi-transposer.Po  vpic-energy-sorter.Po
test/: Makefile.am  Makefile.in  compile-external.sh  fake-HDF5-data.c  read-interface-test-external-plugin.c  read-interface-test-internal-plugin.c  reorganize-new.c  reorganize.c  sds-hist-test.c  sds-perf-test.c  sds-pquery-test.c  sds-query-test.c  sds-remote-query-test.c  trace-test.c
